--- a/FinalProject.html
+++ b/FinalProject.html
@@ -29,8 +29,7 @@
  <p>
  <a href="https://www.khanacademy.org/computer-science/final/4779523153297408">Madsen_final</a>
  </p>
- <iframe src="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes" frameborder="0" scrolling="no" style="border: 0px; width: 940px; height: 467px;"></iframe>
- <script src="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+<h2><a href="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408">Madsen_final</a></h2><script src="https://www.khanacademy.org/computer-science/madsen_final/4779523153297408/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
  
  
  <p>Scrum Document</p> 
