--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <img src="myBanner.jpg">
  <table id="nav-table">
   <tr>
-    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
-    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
-    <td><a href="https://owen-madsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
+    <td><a href="https://owenmadsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
   </tr>   
 </table>
 <h1>Welcome to Owen's Programming Portfolio</h1>
