--- a/javascript.html
+++ b/javascript.html
@@ -19,15 +19,15 @@
 <body>
 <img src="myBanner.jpg">
  <table id="nav-table"> 
-    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
-    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
-    <td><a href="https://owen-madsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
+    <td><a href="https://owenmadsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
 </table>
 <h1>Owen's Javascript Programs</h1>
  <p> This page contains Javascripts apps that I have written and designed </p>
- <p id="link"> Back to <a href="https://owen-madsen.github.io/index.html"> home page </a> </p>
+ <p id="link"> Back to <a href="https://owenmadsen.github.io/index.html"> home page </a> </p>
  <h2><a href="https://www.khanacademy.org/computer-science/madsen_racingbitmoji/6178286814855168">Madsen_racingBitmoji</a></h2><script src="https://github.com/owen-madsen/owen-madsen.github.io/blob/master/Race"></script> 
  <h2 id="race"> <img src="RacingBitmoji.jpg">
  </h2>
