--- a/apps.html
+++ b/apps.html
@@ -8,14 +8,14 @@
 <body>
 <img src="myBanner.jpg">
  <table id="nav-table">
-    <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
-    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
-    <td><a href="https://owen-madsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
+    <td><a href="https://owenmadsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
 </table>
 <h1>Owen's Apps</h1>
  <p> This page contains "app" versions of my programs that I wrote. They run in the browser of devices like phones. Put the link in the browser of your phone, or view this page and click on the link, and try an app!</p>
-  Back to <a href="https://owen-madsen.github.io/index.html"> home page </a>
+  Back to <a href="https://owenmadsen.github.io/index.html"> home page </a>
 </body>
 </html>
