--- a/aboutme.html
+++ b/aboutme.html
@@ -23,11 +23,11 @@
 <body>
 <img src="myBanner.jpg">
  <table id="nav-table">
-   <td><a href="https://owen-madsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
-    <td><a href="https://owen-madsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
-    <td><a href="https://owen-madsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
-    <td><a href="https://owen-madsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
+   <td><a href="https://owenmadsen.github.io/index.html"> <img src="home.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/javascript.html"> <img src="javascripts.jpg">  </a> </td> 
+    <td><a href="https://owenmadsen.github.io/apps.html"> <img src="apps.jpg"> </a> </td>
+    <td><a href="https://owenmadsen.github.io/aboutme.html"> <img src="about.jpg" </a> </td>
+    <td><a href="https://owenmadsen.github.io/FinalProject.html"> <img src="Final Project.jpg" </a> </td>
 </table>
 <h1>About Me</h1>
  <p> My name is Owen Madsen. I am a junior here at URI from Annapolis, Maryland. I am a communications major hoping to pursue and obtain a minor in computer science. This class will hopefully just be the beginning of my computer science career as it is already gaining my interest! <br> I enjoy surfing and having fun with friends in my spare time. <img src="Gansett Surf.jpeg" alt="surf" id="surf"> I love the Los Angeles Chargers although they were much better in San Diego in my opinion. I am a huge wizards fan even though they are awful, their backcourt will always have a place in my heart. <img src="lacrosse.jpg" alt="surf" id="lax"> I have 3 siblings including 2 brothers and an older sister who actually just graduated with a Computer Science Degree who now works for Booze Allen Hamilton based out of their D.C. office, and she's having a wonderful time. Can't wait to learn more.</p>
